# python-project-50

./: 1.json  Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: __init__.py  build_ast_diff.py  cli.py  constants.py  formatting.py  generate_diff.py  get_data.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: expected_json.txt  file1.yml
